--- a/professores/templates/professores/relatos_quinzenais.html
+++ b/professores/templates/professores/relatos_quinzenais.html
@@ -23,7 +23,7 @@
         {% if projeto.tem_relatos %}
           <div class="div_arredondado">
           
-            {% include "cabecalho_projeto.html" %}
+            {% include "cabecalho_projeto.html" with com_tit_original=True %}
 
             <div style="margin-top:8px;"><strong><span lang="pt">Relatos</span><span lang="en">Reports</span>:</strong></div>
 
