--- a/professores/templates/professores/avaliar_bancas.html
+++ b/professores/templates/professores/avaliar_bancas.html
@@ -18,69 +18,24 @@
     {% for banca in bancas %}
       {% with projeto=banca.projeto %}
         {% ifchanged projeto %}
+
+          {% include "cabecalho_projeto.html" with com_tit_original=True %}
+
           {% if projeto %}
-            <strong>
-              <span lang="pt">Projeto:</span>
-              <span lang="en" style="display: none;">Project:</span>
-            </strong>
-
-            {% if projeto.organizacao %}
-              [<a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{projeto.organizacao}}</a>]
-            {% endif %}
-
-            {% if projeto %}
-              <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a><br>
-            {% endif %}
-
-            <strong>
-              <span lang="pt">Semestre:</span>
-              <span lang="en" style="display: none;">Semester:</span>
-            </strong> {{projeto.ano}}.{{projeto.semestre}}<br>
-
-            {% if projeto.orientador %}
-              <strong>
-                <span lang="pt">Orientador{% if projeto.orientador.user.genero == "F" %}a{% endif %}:</span>
-                <span lang="en" style="display: none;">Advisor:</span>
-              </strong>
-              <a href="{% url 'professor_detail' projeto.orientador.id %}">
-                {{projeto.orientador.user.get_full_name}}
-              </a>
-              <br>
-            {% endif %}
-
-            {% with coorientadores=projeto.coorientador_set.all %}
-              {% if coorientadores %}
-                <strong>
-                  <span lang="pt">Coorientador:</span>
-                  <span lang="en" style="display: none;">Co-advisor:</span>
-                </strong>
-                {% for coorientador in coorientadores %}
-                    <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
-                      {{coorientador.usuario.get_full_name}} 
-                    </a>
-                    {% if not forloop.last %}; {% endif %}
-                {% endfor %}
-                </span>
-                <br>
-              {% endif %}
-            {% endwith %}
-
-            {% include "tipo_projeto.html" with com_tipo=True projeto=projeto %}
-            
             <strong style="display: inline-block; margin-top: 6px;">
               <span lang="pt">Grupo:</span>
               <span lang="en" style="display: none;">Group:</span>
             </strong>
             <ul>
-            {% for alocacao in projeto.alocacao_set.all %}
-              <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
-                <li>
-                  {{alocacao.aluno.user.get_full_name}} 
-                  [{{ alocacao.aluno.curso2 }}]
-                  &lt;{{alocacao.aluno.user.email}}&gt; 
-                </li>
-              </a>
-            {% endfor %}
+              {% for alocacao in projeto.alocacao_set.all %}
+                <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
+                  <li>
+                    {{alocacao.aluno.user.get_full_name}} 
+                    [{{ alocacao.aluno.curso2 }}]
+                    &lt;{{alocacao.aluno.user.email}}&gt; 
+                  </li>
+                </a>
+              {% endfor %}
             </ul>
           {% endif %}
 
