--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -91,24 +91,9 @@
                   {% endif %}
                 </div>
               {% endif %}
+
               {% if e.projeto %}
-                <b>Projeto:</b> <a class="imprimir" href="{% url 'projeto_completo' e.projeto.id %}">
-                  {{e.projeto.get_titulo}}
-                </a><br>
-                <b>Organização:</b> <a class="imprimir" href="{% url 'organizacao_completo' e.projeto.organizacao.id %}">{{ e.projeto.organizacao.nome }}</a><br>
-                <span class="orientador">
-                  {% if e.projeto.orientador %}
-                    {% if e.projeto.proposta.intercambio %}
-                      <b>Professor{% if e.projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável:</b>
-                    {% else %}
-                      <b>Orientador{% if e.projeto.orientador.user.genero == 'F' %}a{% endif %}:</b>
-                    {% endif %}
-                    <a class="imprimir" href="{% url 'professor_detail' e.projeto.orientador.id %}">
-                      {{e.projeto.orientador.user.get_full_name}} 
-                    </a>
-                    <a class="email" href="mailto:{{e.projeto.orientador.user.email}}">&lt;{{e.projeto.orientador.user.email}}&gt;</a>
-                  {% endif %}
-                </span>
+                {% include "cabecalho_projeto.html" with projeto=e.projeto %}
                 <div class="grupo" style="margin-top: 1px;">
                   <b>Grupo:</b>
                   <ol>
