--- a/professores/templates/professores/resultado_banca.html
+++ b/professores/templates/professores/resultado_banca.html
@@ -34,47 +34,7 @@
 
 {% block content %}
 
-  <strong>
-    <span lang="pt">Projeto:</span>
-    <span lang="en" style="display: none;">Project:</span>
-  </strong>
-  [<a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{projeto.organizacao}}</a>]
-  <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a><br>
-
-  <strong>
-    <span lang="pt">Semestre:</span>
-    <span lang="en" style="display: none;">Semester:</span>
-  </strong> {{projeto.ano}}.{{projeto.semestre}}<br>
-
-  {% if projeto.orientador %}
-    <strong>
-      <span lang="pt">Orientador{% if projeto.orientador.user.genero == "F" %}a{% endif %}:</span>
-      <span lang="en" style="display: none;">Advisor:</span>
-    </strong>
-    <a href="{% url 'professor_detail' projeto.orientador.id %}">
-      {{projeto.orientador.user.get_full_name}}
-    </a>
-    <br>
-  {% endif %}
-
-  {% with coorientadores=projeto.coorientador_set.all %}
-    {% if coorientadores %}
-      <strong>
-        <span lang="pt">Coorientador:</span>
-        <span lang="en" style="display: none;">Co-advisor:</span>
-      </strong>
-      {% for coorientador in coorientadores %}
-          <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
-            {{coorientador.usuario.get_full_name}} 
-          </a>
-          {% if not forloop.last %}; {% endif %}
-      {% endfor %}
-      </span>
-      <br>
-    {% endif %}
-  {% endwith %}
-
-  {% include "tipo_projeto.html" with com_tipo=True %}
+  {% include "cabecalho_projeto.html" with com_semestre=True %}
   
   <strong style="display: inline-block; margin-top: 6px;">
     <span lang="pt">Grupo:</span>
