--- a/professores/templates/professores/ver_pares_projeto.html
+++ b/professores/templates/professores/ver_pares_projeto.html
@@ -34,38 +34,8 @@
 
 {% block content %}
 
-  <b>
-    <span lang="pt">Projeto:</span>
-    <span lang="en" style="display: none;">Project:</span>
-  </b>
-  <a href="{% url 'projeto_completo' projeto.id %}">
-    [{{ projeto.organizacao.nome }}] {{projeto.get_titulo}}
-    {% include "tipo_projeto.html" %}<br>
-  </a>
-
-  {% if projeto.orientador %}
-    {% if projeto.proposta.intercambio %}
-      <b>
-        <span lang="pt">Professor{% if projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável:</span>
-        <span lang="en" style="display: none;">Responsible Professor:</span>
-      </b>
-    {% else %}
-      <b>
-        <span lang="pt">Orientador{% if projeto.orientador.user.genero == 'F' %}a{% endif %}:</span>
-        <span lang="en" style="display: none;">Advisor:</span>
-      </b>
-    {% endif %}
-    <a href="{% url 'professor_detail' projeto.orientador.id %}">
-      {{projeto.orientador.user.get_full_name}}
-    </a>
-    <a href="mailto:{{projeto.orientador.user.email}}"> &lt;{{projeto.orientador.user.email}}&gt;</a>
-  {% else %}
-    <h3>
-      <span lang="pt">Orientador: Não definido</span>
-      <span lang="en" style="display: none;">Advisor: Not defined</span>
-    </h3>
-  {% endif %}
-  <br><br>
+  {% include "cabecalho_projeto.html" with com_tit_original=True com_semestre=True %}
+  <br>
 
   <b>
     <span lang="pt">Orientações passadas aos estudantes:</span>
