--- a/estudantes/templates/estudantes/alocacao_semanal.html
+++ b/estudantes/templates/estudantes/alocacao_semanal.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-  <div style="margin-bottom: 3px;">
+  <div class="mt-1">
     <b>
       <span lang="pt">Projeto:</span>
       <span lang="en" style="display:none">Project:</span>
