--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -1,6 +1,9 @@
 /* Evita que objetos sejam maiors que a tela. */
 textarea, input, select, label, table, div {max-width:100%;}
 
+/* Em geral está confinado e pode preencher tudo */
+textarea {width: 100%;}
+
 /* O espaço padrão é muito grande (uso em vários lugares) */
 ul, ol {
   /* padding-left: 28px; */
